Fix deprecated URL constructor warning
Replace deprecated URL(String) constructor with URI.create().toURL() in
ZipFileProvider.java to resolve deprecation warning. This change maintains
the same functionality while using the recommended approach for URL creation
introduced in Java 20.